--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "liveServer.settings.port": 5502
+    "liveServer.settings.port": 5502,
+    "projectManager.git.baseFolders": [
+        "C:\\Users\\Student\\workbook3\\yearup-vacation-resort"
+    ]
 }
